tests/files/type_checker_tests/should_pass/047.cmdr
//Test tuples type check
x = 1;
y = ((2.0, true, 3)[x], true, 3);
