tests/files/type_checker_tests/should_fail/087.cmdr
//Should fail indexing if empty tuple
y = 1;
x = ()[y];
